CenterMode: fixed width slides, first slide left align

--- a/static/app.css
+++ b/static/app.css
@@ -400,17 +400,7 @@ footer {
 }
 
 
-.multislides li{
+.centermode li{
     width: 420px;
     margin-right: 40px
-}
-
-.multislides .slides {
-    transition-timing-function: ease;
-    transition-duration: 600ms;
-    transform: translateX(440px);
-}
-
-.js_multislidesnoncenter li {
-    width: 300px;
 }
